...
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="327dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <TextView
                    android:id="@+id/employeeClaimsDateInputTextView"
                    android:layout_width="156dp"
                    android:layout_height="53dp"
                    android:layout_marginLeft="140dp"
                    android:layout_marginTop="-18dp"
                    android:gravity="center_horizontal|center_vertical"
                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton
                android:id="@+id/employeeClaimsDateButton"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center|right"
                android:layout_marginRight="20dp"
                app:srcCompat="@drawable/ic_navbar_attendance" />

...
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="403dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/employeeClaimsAmountEditText"
                        android:layout_width="257dp"
                        android:layout_height="53dp"
                        android:layout_marginLeft="120dp"
                        android:layout_marginTop="0dp" />


...
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="403dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/employeeClaimsItemImageLinkEditText"
                        android:layout_width="178dp"
                        android:layout_height="70dp"
                        android:layout_marginLeft="120dp"
                        android:layout_marginTop="0dp" />


...
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="403dp"
                    android:layout_height="118dp"
                    android:layout_marginTop="5dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/employeeClaimsReasonEditText"
                        android:layout_width="257dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="120dp"
                        android:layout_marginTop="0dp"
                        android:gravity="top|left" />

...
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/employeeClaimsSubmitButton"
            android:layout_width="181dp"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="110dp"
            android:layout_marginTop="630dp"
            android:layout_marginEnd="110dp"
            android:background="@drawable/login_button"
            android:text="Submit"
            android:textColor="@color/white"
            android:textSize="22dp"
            android:textStyle="bold"
            app:initialCornerAngle="27dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
...
