...
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:background="?android:attr/listDivider"
                    android:gravity="center" />

                <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                    android:id="@+id/employeeCreateNewClaimButton"
                    android:layout_width="230dp"
                    android:layout_height="60dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="60dp"
...
                    app:initialCornerAngle="27dp"
                    app:spinning_bar_color="#FFF"
                    app:spinning_bar_padding="6dp"
                    app:spinning_bar_width="4dp" />

                <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                    android:id="@+id/employeeViewApprovedRejectedClaimButton"
                    android:layout_width="230dp"
                    android:layout_height="60dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="30dp"
...
                    app:initialCornerAngle="27dp"
                    app:spinning_bar_color="#FFF"
                    app:spinning_bar_padding="20dp"
                    app:spinning_bar_width="4dp" />

                <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                    android:id="@+id/employeeViewPendingClaimButton"
                    android:layout_width="230dp"
                    android:layout_height="60dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="240dp"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/ic_button_color"
                    android:gravity="center"
                    android:text="Pending Claims"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="22dp"
                    android:textStyle="bold"
                    app:initialCornerAngle="27dp"
                    app:spinning_bar_color="#FFF"
...
                    android:layout_gravity="center"
                    android:layout_marginTop="330dp"
                    android:background="?android:attr/listDivider"
                    android:gravity="center" />

                <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                    android:id="@+id/managerManageAllClaimButton"
                    android:layout_width="230dp"
                    android:layout_height="60dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="30dp"
...
