...

    <string name="employeeClaimsDialogTitle">Claim Application</string>
    <string name="managerManageClaimsSubmitDialogTitle">Claim Application</string>
    <string name="managerManageClaimsClearDialogTitle">Clear Selection</string>

    <!--Home Page Modules-->
    <string name="module_0_label">Home</string>
    <string name="module_1_label">Claims</string>
    <string name="module_2_label">Profile</string>
    <string name="module_3_label">Leave</string>
    <string name="module_4_label">Attendance</string>

    <!--Shared Preferences-->
    <string name="user_sharedprefkey">USERSPKEY</string>
    <string name="user_eid">EMPLOYEEID</string>
    <string name="user_role">ROLE</string>
    <string name="user_current_location">CURRENTLOCATION</string>

    <!-- For Claims Type Spinner -->
    <string-array name="claims_type_array">
        <item>Advertising</item>
        <item>Gifts</item>
        <item>Education</item>
        <item>Misc</item>
        <item>Travel</item>
        <item>Utility</item>
    </string-array>
    <!-- For undefined spinner type -->
    <string name="claims_undefined">Undefined</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="camera_confirm_button_content_description">Confirm</string>
    <string name="camera_cancel_button_content_description">Cancel</string>
    <string name="camera_Image_button_content_description">Image</string>
    <string name="retake_camera_menu_item_title">Retake</string>
    <string name="delete_camera_menu_item_title">Delete</string>
    <string name="profile_image_content_description">Your Profile Picture</string>
    <string name="profile_text_view_contact_title">Contact</string>
...
